--- a/06-listas/conceitos_c.ipynb
+++ b/06-listas/conceitos_c.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,14 +70,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "O produto teclado possui 70 unidades em estoque\n"
+      "O produto tablet possui 100 unidades em estoque\n"
      ]
     }
    ],
@@ -85,14 +85,15 @@
     "# Obter o produto pesquisado pelo usuário\n",
     "produto = str(input('Informe o nome do produto: ')).lower()\n",
     "\n",
-    "# Índice do produto pesquisado na lista produtos\n",
-    "indice = produtos.index(produto)\n",
+    "# Estrutura para analisar se há produto no estoque\n",
+    "if produto in produtos:\n",
+    "    # Índice do produto pesquisado na lista produtos\n",
+    "    indice = produtos.index(produto)\n",
     "\n",
-    "# Produto pesquisado\n",
-    "produto = produtos[indice]\n",
+    "    # Produto pesquisado\n",
+    "    produto = produtos[indice]\n",
     "\n",
-    "# Estrutura para analisar se há o produto em estoque\n",
-    "if indice < len(produtos):\n",
+    "    # Estrutura para analisar se há o produto em estoque\n",
     "    print(f'O produto {produto} possui {estoque[indice]} unidades em estoque')\n",
     "else:\n",
     "    print(f'O produto {produto} não há no estoque')"
